C2364: Fixed logo alignment issue for broker, public and underwriter

--- a/Components/sub-brand-1/common/scss/_component-vars-overrides.scss
+++ b/Components/sub-brand-1/common/scss/_component-vars-overrides.scss
@@ -63,4 +63,11 @@ $mobile-menu-trigger-options: (
 );
 $navigation-items-options: (
         "lap-and-desk-hover-box-shadow": "inset 1px 0 0 #e0e0e0, inset -1px 0 0 #e0e0e0, inset 0 -1px 0 #e0e0e0"
-)
+);
+
+// Below overrides the img width in logo for public, Broker and underwriter
+.logo img.white-logo{
+
+        width: 100%;
+
+}
